--- a/part3/notes-backend/package.json
+++ b/part3/notes-backend/package.json
@@ -12,9 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
     "nodemon": "^2.0.22"
   }
 }
