--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -7,20 +7,25 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf dist && cd ../notes-frontend/ && npm run build && cp -r dist ../notes-backend",
+    "build:ui": "rm -rf ./build && cd ../../part2/phonebook/ && npm run build && cp -r build ../../part3/phonebook-backend",
     "deploy": "fly deploy",
-    "deploy:full": "npm run build:ui && npm run deploy",    
+    "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@1password/op-js": "^0.1.11",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "mongoose": "^7.6.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.10",
+    "eslint": "^8.56.0",
     "nodemon": "^2.0.22"
   }
 }
